
* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  cp --preserve=xattr and --archive now preserve extended attributes even
  when the source file doesn't have write access.
  [bug introduced in coreutils-7.1]

  touch -t [[CC]YY]MMDDhhmm[.ss] now accepts a timestamp string ending in .60,
  to accommodate leap seconds.
  [the bug dates back to the initial implementation]

** Changes in behavior

  id no longer prints SELinux " context=..." when the POSIXLY_CORRECT
  environment variable is set.

** Improvements

  rm: rewrite to use gnulib's fts
  This makes rm -rf significantly faster (400-500%) in some pathological
  cases, and slightly slower (20%) in at least one pathological case.

  rm -r deletes deep hierarchies more efficiently.  Before, execution time
  was quadratic in the depth of the hierarchy, now it is merely linear.
  However, this improvement is not as pronounced as might be expected for
  very deep trees, because prior to this change, for any relative name
  length longer than 8KiB, rm -r would sacrifice official conformance to
  avoid the disproportionate quadratic performance penalty.  Leading to
  another improvement:

  rm -r is now slightly more standards-conformant when operating on
  write-protected files with relative names longer than 8KiB.


* Noteworthy changes in release 7.6 (2009-09-11) [stable]

** Bug fixes

  cp, mv now ignore failure to preserve a symlink time stamp, when it is
  due to their running on a kernel older than what was implied by headers
  and libraries tested at configure time.
  [bug introduced in coreutils-7.5]

  cp --reflink --preserve now preserves attributes when cloning a file.
  [bug introduced in coreutils-7.5]

  cp --preserve=xattr no longer leaks resources on each preservation failure.
  [bug introduced in coreutils-7.1]

  dd now exits with non-zero status when it encounters a write error while
  printing a summary to stderr.
  [bug introduced in coreutils-6.11]
